Cyclic Sort pattern

--- a/06_CyclicSort/Hard-Find the first K missing positive numbers.ipynb
+++ b/06_CyclicSort/Hard-Find the first K missing positive numbers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d86d630",
+   "id": "42bf338c",
    "metadata": {},
    "source": [
     "## Problem: Find the first K missing positive numbers\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a53bc1",
+   "id": "31e67b51",
    "metadata": {},
    "source": [
     "### Approach: \n",
@@ -43,13 +43,15 @@
     "\n",
     "Since, we are considering range [1, n] so, always consider index = nums[i]-1\n",
     "\n",
-    "Post sorting, iterate the array and store missing number. However, there is possibility to have lesser than K numbers missing in the range of n. So we need to add numbers beyond n to have K missing numbers."
+    "Post sorting, iterate the array and store missing number. \n",
+    "\n",
+    "However, there is possibility to have lesser than K numbers missing in the range of n. So we need to add numbers beyond n to have K missing numbers."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "90d6b6b6",
+   "id": "ede207ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8d37039d",
+   "id": "7e3ea14c",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eff3ea2a",
+   "id": "6d1fb0e6",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a25fc2fc",
+   "id": "a98bd9f1",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aa8e3095",
+   "id": "a7346e8d",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "549cabff",
+   "id": "07a41e88",
    "metadata": {},
    "outputs": [],
    "source": []
