Concept of Monotonic stack

--- a/08_MonotonicStack/01-Concept of Monotonic Stack.ipynb
+++ b/08_MonotonicStack/01-Concept of Monotonic Stack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "afa9a1d9",
+   "id": "6ed48c71",
    "metadata": {},
    "source": [
     "## Concept of Monotonic Stack\n",
@@ -25,6 +25,14 @@
     "        MS = [1,4]\n",
     "        Push 8.\n",
     "        MS = [1,4,8]\n",
+    "        \n",
+    "   ##### Template\n",
+    "   \n",
+    "               create an empty stack\n",
+    "                for each element in the array:\n",
+    "                    while stack is not empty AND top of stack is more than the current element:\n",
+    "                        pop the stack\n",
+    "                    push the current element to stack\n",
     "    \n",
     "  #### Decreasing Monotonic Stack\n",
     "    A Monotonic stack is called decreasing monotonic stack, if the elements in stack is in decreasing order from bottom to top. Here every new element should be smaller than or equal to top of stack, if new element is greater, then pop the element from stack, till top element is greater or equal to new element or stack is empty.\n",
@@ -40,6 +48,14 @@
     "        Push 2.\n",
     "        MS = [6,6,2]\n",
     "        \n",
+    "   ##### Template       \n",
+    "   \n",
+    "                create an empty stack\n",
+    "                    for each element in the array:\n",
+    "                        while stack is not empty AND top of stack is less than the current element:\n",
+    "                            pop the stack\n",
+    "                        push the current element to stack\n",
+    "\n",
     "        \n",
     "### Identify the pattern:\n",
     "    Usually, where you have to calculate newxt bigger or next smaller elment. Problem may directly ask the next greater or smaller element or while solving the problem you may have to calculate next greater or smaller element.\n",
@@ -61,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a4058f",
+   "id": "90142ca0",
    "metadata": {},
    "outputs": [],
    "source": []
