Tree Breadth First Search Pattern

--- a/09_Tree-BFS/Easy-Binary Tree level order Traversal.ipynb
+++ b/09_Tree-BFS/Easy-Binary Tree level order Traversal.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d18650f0",
+   "id": "4720df5c",
    "metadata": {},
    "source": [
     "## Problem: Binary Tree level order Traversal\n",
@@ -45,9 +45,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "554a3504",
+   "metadata": {},
+   "source": [
+    "### Approach:\n",
+    "\n",
+    "Since this problem is asking to print values at each level. We use \"BFS Pattern\". For more details: https://github.com/PramodModi/CodingPattern/blob/main/09_Tree-BFS/01-Concept%20of%20BFS%20(Level%20Order%20Traversal).ipynb\n",
+    "\n",
+    "Will use queue to track of each level.\n",
+    "\n",
+    "Steps:\n",
+    "1. Start with root. Enqueue root in the queue\n",
+    "2. Run the loop till queue is empty\n",
+    "3. Run anothe rloop till the queue size. Here queue size is nothing but number of node in a particulr level.\n",
+    "4. Dequeue the node from queue, store the value in a temprary list. \n",
+    "5. Enqueue the left child node and right child node, if they are available.\n",
+    "6. Append result with temp data\n",
+    "7. Return the result."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a953f507",
+   "id": "8d04937f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +90,7 @@
     "    result = []\n",
     "    while q:\n",
     "        temp = []\n",
-    "        for i in range(len(q)):\n",
+    "        for _ in range(len(q)):\n",
     "            node = q.popleft()\n",
     "            temp.append(node.val)\n",
     "            if node.left: q.append(node.left)\n",
@@ -82,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "68932471",
+   "id": "e04b8c40",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7ac4739",
+   "id": "0db4c83a",
    "metadata": {},
    "outputs": [],
    "source": []
