--- a/08_MonotonicStack/Easy-Next Greater Element.ipynb
+++ b/08_MonotonicStack/Easy-Next Greater Element.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc8aa140",
+   "id": "61b9cabb",
    "metadata": {},
    "source": [
     "## Problem: Next Greater Element\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0374bc26",
+   "id": "bffe4d4f",
    "metadata": {},
    "source": [
     "### Approach:\n",
@@ -60,10 +60,15 @@
     "\n",
     "Step:\n",
     "1. Populate the hashmap with next greater element of nums2 array.\n",
+    "    \n",
     "    a. Since next greater element needs to be populated from left to right. So, we will run the for loop from right to left.\n",
-    "    b. Create a decreasing monotonic stack (elelements in stack should be in the order of decreasing order from bottom to top. For mpre details:  https://github.com/PramodModi/CodingPattern/blob/main/08_MonotonicStack/01-Concept%20of%20Monotonic%20Stack.ipynb\n",
+    "    \n",
+    "    b. Create a decreasing monotonic stack (elelements in stack should be in the order of decreasing order from bottom to top. For more details:  https://github.com/PramodModi/CodingPattern/blob/main/08_MonotonicStack/01-Concept%20of%20Monotonic%20Stack.ipynb\n",
+    "    \n",
     "    c. If stack is empty, that means no greater number of that particular number, so it should be -1.\n",
+    "    \n",
     "    d. else, next greater number = stack[-1], the top element in stack.\n",
+    "    \n",
     "2. Creata a result array of size nums1, with 0 as populated values.\n",
     "3. Iterate the nums1, look at the next greater element in hashmap for each number in nums1.\n",
     "4. Return result array."
@@ -72,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9336e228",
+   "id": "6f9b5fd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3acc5eab",
+   "id": "f1cb753b",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1b6e4a61",
+   "id": "8200376a",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca10e53f",
+   "id": "5343d6fa",
    "metadata": {},
    "outputs": [],
    "source": []
