Tree Breadth First Search Pattern

--- a/09_Tree-BFS/Easy-Level Order Successor.ipynb
+++ b/09_Tree-BFS/Easy-Level Order Successor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "911e1e34",
+   "id": "b84769f0",
    "metadata": {},
    "source": [
     "## Problem: Level Order Successor\n",
@@ -35,9 +35,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b52950e6",
+   "metadata": {},
+   "source": [
+    "### Approach\n",
+    "Since this problem is asking for level order succesor. We will traverse level order, we get the given key, will return the first element from q. We use \"BFS Pattern\". For more details: https://github.com/PramodModi/CodingPattern/blob/main/09_Tree-BFS/01-Concept%20of%20BFS%20(Level%20Order%20Traversal).ipynb\n",
+    "\n",
+    "Will use queue to track of each level.\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "1. Start with root. Enqueue root in the queue\n",
+    "2. Run the loop till queue is empty\n",
+    "3. Dequeue the node from queue. \n",
+    "4. Enqueue the left child node and right child node, if they are available.\n",
+    "5. If given key is equal to value of dequed node, then return the first node from queue, if queue is not empty. Return None, if q is empty.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "069bf80b",
+   "id": "150ff798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a872d998",
+   "id": "76d476d7",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d32c5a84",
+   "id": "b2c5a46a",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "802af7e0",
+   "id": "e13704b2",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf236b00",
+   "id": "f1786a7b",
    "metadata": {},
    "outputs": [],
    "source": []
