Tree Breadth First Search Pattern

--- a/09_Tree-BFS/Easy-Minimum Depth of a Binary Tree.ipynb
+++ b/09_Tree-BFS/Easy-Minimum Depth of a Binary Tree.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "525efa1b",
+   "id": "e511796e",
    "metadata": {},
    "source": [
     "## Problem: Minimum Depth of a Binary Tree\n",
@@ -42,9 +42,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3946bcd",
+   "metadata": {},
+   "source": [
+    "### Approach:\n",
+    "Since this problem is asking for minimum depth. We will traverse level order, once there is leaf node, return the depth. We use \"BFS Pattern\". For more details: https://github.com/PramodModi/CodingPattern/blob/main/09_Tree-BFS/01-Concept%20of%20BFS%20(Level%20Order%20Traversal).ipynb\n",
+    "\n",
+    "Will use queue to track of each level.\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "1. Start with root. Enqueue root in the queue\n",
+    "2. initialize a varaible depth = 0\n",
+    "2. Run the loop till queue is empty\n",
+    "3. Depth variable will keep increamenting by 1 for each level. That is the depth of each level.\n",
+    "4. Run anothe loop till the queue size. Here queue size is nothing but number of node in a particulr level.\n",
+    "5. Dequeue the node from queue. If no further children, that means this is the first leafe node. Return the depth.\n",
+    "6. Enqueue the left child node and right child node, if they are available.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9017bc18",
+   "id": "0172cfdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7d5d9ba3",
+   "id": "0baf8de5",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "68cf5803",
+   "id": "a7d77478",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e08887d",
+   "id": "305297e3",
    "metadata": {},
    "outputs": [],
    "source": []
