Tree Breadth First Search Pattern

--- a/09_Tree-BFS/Medium-Connect All Level Order Siblings.ipynb
+++ b/09_Tree-BFS/Medium-Connect All Level Order Siblings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1e077f1",
+   "id": "280457dd",
    "metadata": {},
    "source": [
     "## Problem: Connect All Level Order Siblings\n",
@@ -13,17 +13,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d239e6",
+   "id": "7bccf20b",
    "metadata": {},
    "source": [
     "### Approach: \n",
-    "This problem follows the Binary Tree Level Order Traversal pattern. We can follow the same BFS approach. The only difference will be that while traversing we will remember (irrespective of the level) the previous node to connect it with the current node."
+    "This problem follows the Binary Tree Level Order Traversal pattern. We can follow the same BFS approach. \n",
+    "For more details: https://github.com/PramodModi/CodingPattern/blob/main/09_Tree-BFS/01-Concept%20of%20BFS%20(Level%20Order%20Traversal).ipynb\n",
+    "\n",
+    "The only difference will be that while traversing we will remember (irrespective of the level) the previous node to connect it with the current node.\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "1. Start with root. Enqueue root in the queue\n",
+    "2. Define a variable say prevNode, to remember previous node.\n",
+    "3. Run the loop till queue is empty\n",
+    "4. Dequeue the node from queue, say currentNode\n",
+    "5. If rightNode is not None (It would be None at the begining), then prevNode.next will point to currentNode.\n",
+    "6. Enqueue the left child node and right child node, if they are available.\n",
+    "7. Return root."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "98213b78",
+   "id": "0aac9ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d4693ace",
+   "id": "acc84898",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f86d4bd1",
+   "id": "0ce34b3d",
    "metadata": {},
    "outputs": [],
    "source": []
