Breadth First Search pattern

--- a/10_Tree-DFS/Medium-Tree Diameter.ipynb
+++ b/10_Tree-DFS/Medium-Tree Diameter.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "591b4636",
+   "id": "423d4a1e",
    "metadata": {},
    "source": [
     "## Problem: Tree Diameter\n",
@@ -44,12 +44,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e2ea4e",
+   "id": "d6c369d6",
    "metadata": {},
    "source": [
     "### Approach:\n",
     "\n",
-    "This problem belongs to Tree-DFS Pattern. Here is the slight differences:\n",
+    "This problem belongs to Tree-DFS Pattern. More details: https://github.com/PramodModi/CodingPattern/blob/main/10_Tree-DFS/01-Concept%20of%20DFS%20(Depth%20First%20Search).ipynb\n",
+    "\n",
+    "Here is the slight differences:\n",
     "At every step, we have to find the height of left and right child of current node. FOr this we will have to make two recursive call.\n",
     "Diameter of curent node = height of left node + height of right node.\n",
     "At any step, maximum diameter = maximum of prev caculated diameter and current node diameter. We will store the max diameter in class level variable.\n",
@@ -59,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "97ab428e",
+   "id": "9ef42ac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e87bce99",
+   "id": "834c8a12",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "23ce4ef2",
+   "id": "302ea0ac",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8336957",
+   "id": "a8009ab3",
    "metadata": {},
    "outputs": [],
    "source": []
