Breadth First Search pattern

--- a/10_Tree-DFS/Easy-Binary tree Path Sum.ipynb
+++ b/10_Tree-DFS/Easy-Binary tree Path Sum.ipynb
@@ -56,7 +56,15 @@
    "id": "13864966",
    "metadata": {},
    "source": [
-    "### Approach: "
+    "### Approach: \n",
+    "This problem can be solved by Tree-DFS pattern. For more details: https://github.com/PramodModi/CodingPattern/blob/main/10_Tree-DFS/01-Concept%20of%20DFS%20(Depth%20First%20Search).ipynb\n",
+    "\n",
+    "Steps:\n",
+    "1. Keep reducing the targetSum by root.val\n",
+    "2. We get all numbers from top to bottom when target sum is zero. However, problem is askig path from root to leaf\n",
+    "so, need additional check, if root.left and root.right are None.\n",
+    "3. call two recursive method, one for left child and another for right child.\n",
+    "4. Actually it is a pre order traversal scenario."
    ]
   },
   {
