Breadth First Search pattern

--- a/10_Tree-DFS/Medium- Counts path for a sum.ipynb
+++ b/10_Tree-DFS/Medium- Counts path for a sum.ipynb
@@ -47,7 +47,9 @@
    "metadata": {},
    "source": [
     "### Approach: \n",
-    "This problem belongs to Tree-DFS pattern, as we have to traverse all nodes top to bottom to find the sum of nodes equal to Target sum.\n",
+    "This problem belongs to Tree-DFS pattern, as we have to traverse all nodes top to bottom to find the sum of nodes equal to Target sum. For more details: https://github.com/PramodModi/CodingPattern/blob/main/10_Tree-DFS/01-Concept%20of%20DFS%20(Depth%20First%20Search).ipynb\n",
+    "\n",
+    "Steps:\n",
     "\n",
     "We will use recursive approach. The trick here is that, the sum is not necessary to begin from root.\n",
     "So, sum should be calculated from bottom node to top, if sum == target sum then count is increased by 1. And keep doing the sum as node's value can be negative also.\n",
