Breadth First Search pattern

--- a/10_Tree-DFS/Medium-All paths for a sum.ipynb
+++ b/10_Tree-DFS/Medium-All paths for a sum.ipynb
@@ -49,6 +49,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bebf839a",
+   "metadata": {},
+   "source": [
+    "### Approach:\n",
+    "\n",
+    "This problem can be solved by Tree-DFS pattern. For more details: https://github.com/PramodModi/CodingPattern/blob/main/10_Tree-DFS/01-Concept%20of%20DFS%20(Depth%20First%20Search).ipynb\n",
+    "\n",
+    "Here, we need to print the path as well, so will pass result array to store the arrays of values, combined give target sum. Also, need to pass a temp list which will have value of visited node. Once target sum is zero, and it is leaf node, then append the temp values to the result array.\n",
+    "\n",
+    "Do not forget to backtrack the temp array at the end of the recurssive call."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "8cd72266",
