Breadth First Search pattern

--- a/10_Tree-DFS/Medium-Sum of path Numbers.ipynb
+++ b/10_Tree-DFS/Medium-Sum of path Numbers.ipynb
@@ -56,6 +56,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20765bc7",
+   "metadata": {},
+   "source": [
+    "### Approach:\n",
+    "This problem can be solved by Tree-DFS pattern. For more details: https://github.com/PramodModi/CodingPattern/blob/main/10_Tree-DFS/01-Concept%20of%20DFS%20(Depth%20First%20Search).ipynb\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "    Convert digits to numbers starting from root to leaf node. \n",
+    "    Pass a pathSum as a 0 value at the begining of recursive method. \n",
+    "    At current node, pathSum = 10* pathSum + node.val . Once reaches to leaf node return the number.\n",
+    "    Recursively call method for left and right nodes and return the addition."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "f4599021",
