Breadth First Search pattern

--- a/10_Tree-DFS/Medium-Path with maximum Sum.ipynb
+++ b/10_Tree-DFS/Medium-Path with maximum Sum.ipynb
@@ -51,6 +51,9 @@
     "### Approach:\n",
     "\n",
     "This problem belongs to Tree-DFS pattern. For more details:\n",
+    " https://github.com/PramodModi/CodingPattern/blob/main/10_Tree-DFS/01-Concept%20of%20DFS%20(Depth%20First%20Search).ipynb\n",
+    "\n",
+    "Steps:\n",
     "\n",
     "The difference here is that:\n",
     "1. We need to call recursive function 2 times, one for left child and one for right child\n",
