--- a/14_TopKElements/Medium-Kth Largest Element in a Stream.ipynb
+++ b/14_TopKElements/Medium-Kth Largest Element in a Stream.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba5b7654",
+   "id": "0dea23ba",
    "metadata": {},
    "source": [
-    "## Problem: 703. Kth Largest Element in a Stream\n",
+    "## Problem: Kth Largest Element in a Stream\n",
     "LeetCode: 703. Kth Largest Element in a Stream\n",
     "\n",
     "Design a class to find the kth largest element in a stream. Note that it is the kth largest element in the sorted order, not the kth distinct element.\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0f532d",
+   "id": "50165df2",
    "metadata": {},
    "source": [
     "### Approach:\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9c6bbcbf",
+   "id": "d7c9ed1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9045115b",
+   "id": "5a2df7d7",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2786675b",
+   "id": "769a365e",
    "metadata": {},
    "outputs": [],
    "source": []
