--- a/22_TopologicalSort/Hard-All Tasks Scheduling Order.ipynb
+++ b/22_TopologicalSort/Hard-All Tasks Scheduling Order.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "id": "222f4ef0",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,8 @@
     "    inorder = [0] * tasks\n",
     "    graph = [[] for _ in range(tasks)]\n",
     "    for u, v in prerequisites:\n",
-    "        graph[v].append(u)\n",
-    "        inorder[u] += 1   \n",
+    "        graph[u].append(v)\n",
+    "        inorder[v] += 1   \n",
     "    order = [x for x in range(len(inorder)) if inorder[x] == 0]\n",
     "   \n",
     "    result = []\n",
@@ -71,17 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "id": "d0b9b2ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 2, 3], [1, 0, 2, 3]]"
+       "[[3, 2, 0, 1], [3, 2, 1, 0]]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,17 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "id": "4a6d9391",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[2, 1, 0]]"
+       "[[0, 1, 2]]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,29 +117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "id": "37792582",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[4, 5, 2, 0, 3, 1],\n",
-       " [4, 5, 2, 3, 0, 1],\n",
-       " [4, 5, 2, 3, 1, 0],\n",
-       " [4, 5, 0, 2, 3, 1],\n",
-       " [5, 4, 2, 0, 3, 1],\n",
-       " [5, 4, 2, 3, 0, 1],\n",
-       " [5, 4, 2, 3, 1, 0],\n",
-       " [5, 4, 0, 2, 3, 1],\n",
-       " [5, 2, 4, 3, 0, 1],\n",
-       " [5, 2, 4, 3, 1, 0],\n",
-       " [5, 2, 4, 0, 3, 1],\n",
-       " [5, 2, 3, 4, 0, 1],\n",
-       " [5, 2, 3, 4, 1, 0]]"
+       "[[0, 1, 4, 3, 2, 5],\n",
+       " [0, 1, 3, 4, 2, 5],\n",
+       " [0, 1, 3, 2, 4, 5],\n",
+       " [0, 1, 3, 2, 5, 4],\n",
+       " [1, 0, 3, 4, 2, 5],\n",
+       " [1, 0, 3, 2, 4, 5],\n",
+       " [1, 0, 3, 2, 5, 4],\n",
+       " [1, 0, 4, 3, 2, 5],\n",
+       " [1, 3, 0, 2, 4, 5],\n",
+       " [1, 3, 0, 2, 5, 4],\n",
+       " [1, 3, 0, 4, 2, 5],\n",
+       " [1, 3, 2, 0, 5, 4],\n",
+       " [1, 3, 2, 0, 4, 5]]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
