Corrected spelling mistake

--- a/21_Backtracking/Medium-Combination Sum.ipynb
+++ b/21_Backtracking/Medium-Combination Sum.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "source": [
     "### Approach: \n",
-    "In Genral for this lind of problem, We can start with number at index 0, keep adding next numbers till either sum  is equal to target or sum is greater than target. Keep storing the numbers in temporary list, once sum is equal to target, then copy the temp list data to result. Then remove the last number from temp list and add next number. If sum is more than target, remove the number (backtracking) and take another number. Repeat this process till you reach end of the array.\n",
+    "In Genral for this kind of problem, We can start with number at index 0, keep adding next numbers till either sum  is equal to target or sum is greater than target. Keep storing the numbers in temporary list, once sum is equal to the target, then copy the temp list data in to result list. Then remove the last number from temp list and add next number (Backtracking). If sum is more than target, remove the number (backtracking) and take another number. Repeat this process till you reach end of the array.\n",
     "\n",
     "Here for simplicity, rather than maintaining sum, we can reduce target with selected number. So, we have to check if target ==0 or target < 0.\n",
     "\n",
