--- a/20_DP-PalindromicSubsequence/Medium-Find if a string is K-Palindromic.ipynb
+++ b/20_DP-PalindromicSubsequence/Medium-Find if a string is K-Palindromic.ipynb
@@ -30,7 +30,11 @@
    "source": [
     "### Approach: \n",
     "\n",
-    "This problem is very much similar to finding the minimum deletions in a string to make it a palindrome. If the “minimum deletion count” is not more than K, the string will be K-palindromic.\n"
+    "This problem is very much similar to finding the minimum deletions in a string to make it a palindrome. If the “minimum deletion count” is not more than K, the string will be K-palindromic.\n",
+    "\n",
+    "Minimum Deletion to make Palindrom: https://github.com/PramodModi/CodingPattern/blob/main/20_DP-PalindromicSubsequence/Medium-Minimum%20Deletion%20in%20a%20string%20to%20make%20it%20a%20Palindrome.ipynb\n",
+    "\n",
+    "Palindromic Subsequence: https://github.com/PramodModi/CodingPattern/blob/main/20_DP-PalindromicSubsequence/Medium-Longest%20Palindromic%20Subsequence.ipynb\n"
    ]
   },
   {
@@ -139,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
