--- a/20_DP-PalindromicSubsequence/Medium-Minimum Deletion in a string to make it a Palindrome.ipynb
+++ b/20_DP-PalindromicSubsequence/Medium-Minimum Deletion in a string to make it a Palindrome.ipynb
@@ -34,7 +34,9 @@
    "source": [
     "### Approach:\n",
     "\n",
-    "This is same as \"Longest Palindromic Subsequence\" with little modification. The letters which are not part of the palindrom, remove those letters. Basically, minimum deletion = length of string - longest palindromic subsequence."
+    "This is same as \"Longest Palindromic Subsequence\" with little modification. The letters which are not part of the palindrom, remove those letters. Basically, minimum deletion = length of string - longest palindromic subsequence.\n",
+    "\n",
+    "Palindromic Subsequence: https://github.com/PramodModi/CodingPattern/blob/main/20_DP-PalindromicSubsequence/Medium-Longest%20Palindromic%20Subsequence.ipynb"
    ]
   },
   {
@@ -139,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
