--- a/19_DP-LongestCommonSubstring/Medium-Longest Common Substring.ipynb
+++ b/19_DP-LongestCommonSubstring/Medium-Longest Common Substring.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "6e4c31a3",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "    \n",
     "    if string1[index1] == string2[index2]:\n",
     "        count = lcs_rec(string1, string2, index1+1, index2+1, count+1)\n",
-    "    count1 = max(count, lcs_rec(string1, string2, index1+1, index2, 0), lcs_rec(string1, string2, index1, index2+1, 0))\n",
+    "    count1 = max(lcs_rec(string1, string2, index1+1, index2, 0), lcs_rec(string1, string2, index1, index2+1, 0))\n",
     "    count = max(count1, count)\n",
     "    return count\n",
     "    "
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "fa406bad",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "d477347e",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "3"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,11 +103,87 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0fd7de2e-f46e-4cf7-942c-de2764e12664",
+   "metadata": {},
+   "source": [
+    "### Memoization : There are three variables , index1, index2 and count. So, we need three dimensional memoization.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "19589429-fdf7-42f5-8c41-d36f057f343d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longestComonSubstring_mem(string1, string2):\n",
+    "    mem = {}\n",
+    "    return lcs_rec(string1, string2, 0, 0, 0, mem)\n",
+    "def lcs_rec(string1, string2, index1, index2, count, mem):\n",
+    "    if index1 == len(string1) or index2 == len(string2):\n",
+    "        return count\n",
+    "    key = str(index1) + str(index2) + str(count)\n",
+    "    if key in mem:\n",
+    "        return mem[key]\n",
+    "    if string1[index1] == string2[index2]:\n",
+    "        count = lcs_rec(string1, string2, index1+1, index2+1, count+1, mem)\n",
+    "    count1 = max(lcs_rec(string1, string2, index1+1, index2, 0, mem), lcs_rec(string1, string2, index1, index2+1, 0, mem))\n",
+    "    count = max(count1, count)\n",
+    "    mem[key] = count\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cc80e792-aa4f-48e4-882e-ca80327d1cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 = \"abdca\"\n",
+    "string2 = \"cbda\"\n",
+    "longestComonSubstring_mem(string1, string2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "50633327-00ef-442a-b359-45bc8877f8e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 = \"passport\"\n",
+    "string2 = \"ppsspt\"\n",
+    "longestComonSubstring_mem(string1, string2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8fe745e9",
    "metadata": {},
    "source": [
-    "### Memoization : There are three variables , index1, index2 and count. So, we need three dimensional memoization.\n",
-    "\n",
     "### DP method:\n",
     "DP is based on only index1 and index2."
    ]
@@ -262,7 +338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
