--- a/16_DP-KnapSack(0:1)/Medium-Minimum Subset Sum Difference.ipynb
+++ b/16_DP-KnapSack(0:1)/Medium-Minimum Subset Sum Difference.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "cf2a1647",
    "metadata": {},
    "outputs": [],
@@ -133,20 +133,18 @@
     "def minimumSumDifference1(array, index, sum1, sum2, mem):\n",
     "    if index < 0:\n",
     "        return abs(sum1-sum2)\n",
-    "    if sum1 in mem:\n",
-    "        if mem[sum1][index]!= -1:\n",
-    "            return mem[sum1][index]\n",
-    "    else:\n",
-    "        mem[sum1] = [-1]*(len(array))\n",
+    "    key = str(index) + str(sum1)\n",
+    "    if key in mem:\n",
+    "        return mem[key]\n",
     "    diff1 = minimumSumDifference1(array, index-1, sum1 + array[index], sum2, mem)\n",
     "    diff2  = minimumSumDifference1(array, index-1, sum1, sum2+array[index], mem)\n",
-    "    mem[sum1][index] =  min(diff1, diff2)\n",
-    "    return mem[sum1][index]"
+    "    mem[key] =  min(diff1, diff2)\n",
+    "    return mem[key]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "23f69f28",
    "metadata": {},
    "outputs": [
@@ -156,7 +154,7 @@
        "3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "47129aeb",
    "metadata": {},
    "outputs": [
@@ -178,7 +176,7 @@
        "0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
