--- a/15_KWayMerge/Medium-Merge K Sorted Lists.ipynb
+++ b/15_KWayMerge/Medium-Merge K Sorted Lists.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "765fb12e",
    "metadata": {},
    "outputs": [],
@@ -93,12 +93,12 @@
     "    minHeap = []\n",
     "    for i in range (len(lists)):\n",
     "        node = lists[i]\n",
-    "        heapq.heappush(minHeap, (node.val, node, i))\n",
+    "        heapq.heappush(minHeap, (node.val, node))\n",
     "    head = None\n",
     "    temp = None\n",
     "    \n",
     "    while minHeap:\n",
-    "        val, node, index = heapq.heappop(minHeap)\n",
+    "        val, node = heapq.heappop(minHeap)\n",
     "        if head is None:\n",
     "            head = node\n",
     "            temp = node\n",
@@ -109,7 +109,7 @@
     "            continue\n",
     "        else:\n",
     "            node = node.next\n",
-    "            heapq.heappush(minHeap,(node.val, node, index))\n",
+    "            heapq.heappush(minHeap,(node.val, node))\n",
     "    return head\n",
     "        \n",
     "\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c5607cd2",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
