--- a/03_FastSlowPointers/Easy-Happy Number.ipynb
+++ b/03_FastSlowPointers/Easy-Happy Number.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "65996b73",
    "metadata": {},
    "outputs": [],
@@ -70,8 +70,6 @@
     "        return slow == 1\n",
     "\n",
     "def getNewNumber(num):\n",
-    "    s =  set()\n",
-    "    s.add(0)\n",
     "    sum = 0\n",
     "    while num:\n",
     "        num, r = divmod(num,10)\n",
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "fdccd68d",
    "metadata": {},
    "outputs": [
@@ -91,7 +89,7 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "758193b1",
    "metadata": {},
    "outputs": [
@@ -113,7 +111,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
