--- a/10_Tree-DFS/Medium-Path with maximum Sum.ipynb
+++ b/10_Tree-DFS/Medium-Path with maximum Sum.ipynb
@@ -67,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "5f3beaca",
+   "execution_count": 5,
+   "id": "f4c77463-3d19-4026-9e15-5f7bcc7cbebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,31 +76,39 @@
     "    def __init__(self, val, left = None, right = None):\n",
     "        self.val = val\n",
     "        self.left = left\n",
-    "        self.right = right\n",
-    "class TreeInfo:\n",
-    "    def __init__(self, maxSum = 0):\n",
-    "        self.maxSum = maxSum\n",
-    "def maxPathSum(root):\n",
-    "    info = TreeInfo()\n",
-    "    getMaxPathsum(root, info)\n",
-    "    return info.maxSum\n",
-    "def getMaxPathsum(root, info):\n",
-    "    if root is None:\n",
-    "        return 0\n",
-    "    leftPathSum = getMaxPathsum(root.left, info)\n",
-    "    rightPathSum = getMaxPathsum(root.right, info)\n",
-    "    maxBranchSum = max(leftPathSum, rightPathSum)\n",
-    "    maxSumAtCurrentNode = max(root.val + maxBranchSum, root.val)\n",
-    "    maxPathSum = max(leftPathSum + rightPathSum + root.val, maxSumAtCurrentNode)\n",
-    "    info.maxSum = max(info.maxSum, maxPathSum)\n",
-    "    return maxSumAtCurrentNode\n",
-    "    "
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "def9491d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMaxSumPath(tree):\n",
+    "    _, maxSum = getMaxSumaInTree(tree)\n",
+    "    return maxSum\n",
+    "\n",
+    "def getMaxSumaInTree(tree):\n",
+    "    if tree is None:\n",
+    "        return (float(\"-inf\"), float(\"-inf\"))\n",
+    "    leftBranchMax,leftMax = getMaxSumaInTree(tree.left)\n",
+    "    rightBranchMax, rightMax = getMaxSumaInTree(tree.right)\n",
+    "    childBranchMax = max(leftBranchMax, rightBranchMax)\n",
+    "    data = tree.val\n",
+    "    ChildBranchAndNodeMax = max(childBranchMax + data, data)\n",
+    "    MaxSumAtNode = max(leftBranchMax+rightBranchMax+data, ChildBranchAndNodeMax)\n",
+    "    MaxSum = max(leftMax, rightMax, MaxSumAtNode)\n",
+    "\n",
+    "    \n",
+    "    return (ChildBranchAndNodeMax,MaxSum)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "dc2d511a",
+   "id": "73ffc9da-7ca6-4e0e-91bd-00dd19e8ab51",
    "metadata": {},
    "outputs": [
     {
@@ -116,13 +124,13 @@
    ],
    "source": [
     "root = Node(-10, Node(9), Node(20, Node(15), Node(7)))\n",
-    "maxPathSum(root)"
+    "getMaxSumPath(root)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "77323706",
+   "id": "88a5670b-3bdd-4b07-8c8b-7903c9a33901",
    "metadata": {},
    "outputs": [
     {
@@ -138,13 +146,13 @@
    ],
    "source": [
     "root = Node(1, Node(-2), Node(3))\n",
-    "maxPathSum(root)"
+    "getMaxSumPath(root)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5b9400ca",
+   "id": "046151fd-c562-47c5-b993-65c24e76d466",
    "metadata": {},
    "outputs": [
     {
@@ -160,14 +168,13 @@
    ],
    "source": [
     "root = Node(5,Node(4, Node(11)), Node(8, Node(13, Node(7, None, Node(1)), Node(2)), Node(4)))\n",
-    "maxPathSum(root)\n",
-    "# Expected 48"
+    "getMaxSumPath(root)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def9491d",
+   "id": "9bcdb3c3-2c9e-484f-bb96-bccbe27d44d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
