Added one more approach

--- a/10_Tree-DFS/Medium- Counts path for a sum.ipynb
+++ b/10_Tree-DFS/Medium- Counts path for a sum.ipynb
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "89d82e05",
+   "execution_count": 3,
+   "id": "b67707a1-e19e-4689-ac5d-933191c07f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,17 @@
     "    def __init__(self, val, left = None, right = None):\n",
     "        self.val = val\n",
     "        self.left = left\n",
-    "        self.right = right\n",
-    "        \n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "89d82e05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Approach 1\n",
     "def pathSum(root, targetSum):\n",
     "    return getPathSum(root, targetSum, [])\n",
     "    \n",
@@ -180,8 +189,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "519a78ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Approach 2, Without for loop\n",
+    "def pathSum1(root, targetSum):\n",
+    "    temp = {}\n",
+    "    return getPathSum1(root, targetSum, temp, 0)\n",
+    "    \n",
+    "def getPathSum1(root, targetSum, temp, sum):\n",
+    "    if root is None:\n",
+    "        return 0\n",
+    "    sum += root.val\n",
+    "    count = 0\n",
+    "    k = abs(targetSum -sum)\n",
+    "    if k in temp:\n",
+    "        count+= temp[k]\n",
+    "    temp[sum] = temp.get(sum, 0)+1\n",
+    "    count += getPathSum1(root.left, targetSum, temp, sum)\n",
+    "    count += getPathSum1(root.right, targetSum, temp, sum)\n",
+    "    \n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "aa349a70-6766-430e-acb3-3873c1df3024",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = Node(5, Node(4,Node(11, Node(7), Node(2))), Node(8, Node(13), Node(4, Node(5), Node(1))))\n",
+    "pathSum1(root, 22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "bb1c44e8-1f46-4ec5-abdd-57422ccdcbba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = Node(10, Node(5, Node(3, Node(3), Node(-2)), Node(2, None, Node(1)) ), Node(-3, None, Node(11)))\n",
+    "pathSum1(root, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "94c9d577-c9a5-4938-8b5a-808852dfb5be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = Node(10, Node(5, Node(3, Node(3), Node(-2)), Node(2, None, Node(1)) ), Node(-3, None, Node(11)))\n",
+    "pathSum1(root, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62529510-8d4d-48f7-8253-0719d2f69204",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -189,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
