--- a/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "e010ec4a",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "f6766a9a",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "3"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "e2e901a5",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,6 +150,90 @@
     "  [\"0\",\"0\",\"0\",\"0\",\"0\"]\n",
     "]\n",
     "numIslands(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ee4e87f8-e3d0-434d-a201-23cf167c24a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## DFS Technique 2\n",
+    "def numIslands1(grid):\n",
+    "    num = 0\n",
+    "    \n",
+    "    for i in range(len(grid)):\n",
+    "        for j in range(len(grid[i])):\n",
+    "            if grid[i][j] == \"1\":\n",
+    "                num += getIsland1(i, j, grid)\n",
+    "    return num\n",
+    "\n",
+    "def getIsland1(row, col, grid):\n",
+    "    \n",
+    "    grid[row][col] = \"2\"\n",
+    "    sides = [(0,1),(0,-1), (1,0), (-1,0)]\n",
+    "    \n",
+    "    for x, y in sides:\n",
+    "        r = row + x\n",
+    "        c = col + y\n",
+    "        if r >= 0 and r < len(grid) and c >= 0 and c < len(grid[0]) and grid[r][c] == \"1\":\n",
+    "            getIsland1(r, c, grid)\n",
+    "    return 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c2b2d1d2-6e60-4564-a33f-58b42bfd833f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"0\",\"0\",\"1\",\"0\",\"0\"],\n",
+    "  [\"0\",\"0\",\"0\",\"1\",\"1\"]\n",
+    "]\n",
+    "numIslands1(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9c7ad55c-1aca-48fd-9b60-30747b7a998b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [\n",
+    "  [\"1\",\"1\",\"1\",\"1\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"1\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"0\",\"0\",\"0\",\"0\",\"0\"]\n",
+    "]\n",
+    "numIslands1(grid)"
    ]
   },
   {
@@ -260,7 +344,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
