--- a/02_Island-MatrixTraversal/Easy-Biggest Island.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Biggest Island.ipynb
@@ -143,8 +143,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7487c131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxAreaOfIsland1(grid):\n",
+    "    maxArea = 0\n",
+    "    for i in range(len(grid)):\n",
+    "        for j in range(len(grid[i])):\n",
+    "            if grid[i][j] == 1:\n",
+    "                maxArea = max(maxArea, IslandArea1(i, j, grid))\n",
+    "    return maxArea\n",
+    "\n",
+    "\n",
+    "def IslandArea1(row, col, grid):\n",
+    "    area = 1\n",
+    "    grid[row][col] = 2\n",
+    "    sides = [(-1,0), (1,0),(0,1),(1,0)]\n",
+    "    for x, y in sides:\n",
+    "        r = row +x\n",
+    "        c = col + y\n",
+    "        if r >= 0 and r < len(grid) and c >= 0 and c < len(grid[0]) and grid[r][c] == 1:\n",
+    "            area += IslandArea1(r,c,grid)\n",
+    "    return area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "765c2f4a-9fa5-4ffb-bab2-0b51b9b2b609",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[0,0,1,0,0,0,0,1,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,1,1,1,0,0,0],\n",
+    "        [0,1,1,0,1,0,0,0,0,0,0,0,0],\n",
+    "        [0,1,0,0,1,1,0,0,1,0,1,0,0],\n",
+    "        [0,1,0,0,1,1,0,0,1,1,1,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,1,0,0],\n",
+    "        [0,0,0,0,0,0,0,1,1,1,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,1,1,0,0,0,0]]\n",
+    "maxAreaOfIsland1(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "92c00fe2-35f4-4779-b581-996085cae0f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[0,0,0,0,0,0,0,0]]\n",
+    "maxAreaOfIsland1(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "451691bd-a030-4574-b1ce-fb69df86b3c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
