--- a/02_Island-MatrixTraversal/Medium-Number of Distinct Island.ipynb
+++ b/02_Island-MatrixTraversal/Medium-Number of Distinct Island.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "c898b371",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "4d47f540",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "fceaee39",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "3"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,8 +143,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6c7a3628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def countOfDistinctIslands1(grid):\n",
+    "    s = set()\n",
+    "    \n",
+    "    for i in range(len(grid)):\n",
+    "        for j in range(len(grid[i])):\n",
+    "            if grid[i][j] == 1:\n",
+    "                coordinates =[]\n",
+    "                getIsland1(i,j,grid, coordinates)\n",
+    "                s.add(\"\".join(coordinates))\n",
+    "    return len(s)\n",
+    "\n",
+    "def getIsland1(row,col,grid, coordinates):\n",
+    "    grid[row][col] = 2\n",
+    "    coordinates.append(str((0,0)))\n",
+    "    nbrs = [(1,0), (-1,0), (0,1), (0,-1)]\n",
+    "    for x, y in nbrs:\n",
+    "        nr = row + x\n",
+    "        nc = col + y\n",
+    "        if nr >= 0 and nr < len(grid) and nc >= 0 and nc < len(grid[0]) and grid[nr][nc] == 1:\n",
+    "            coordinates.append(str((x, y)))\n",
+    "            getIsland1(nr,nc,grid, coordinates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "58dfe9e0-8631-4117-a4e3-deda58a5fd55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[1, 1, 0, 1, 1], \n",
+    "[1, 0, 0, 0, 0], \n",
+    "[0, 0, 0, 0, 1], \n",
+    "[1, 1, 0, 1, 1]]\n",
+    "countOfDistinctIslands1(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cefd40a2-423d-40ad-964c-c2c73b21c696",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[1, 1, 0, 0, 0],[1, 1, 0, 0, 0],[0, 0, 0, 1, 1], [0, 0, 0, 1, 1]]\n",
+    "countOfDistinctIslands1(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28a40348-187a-4c6b-b217-89e4a988e1ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
