--- a/10_Tree-DFS/Medium-Tree Diameter.ipynb
+++ b/10_Tree-DFS/Medium-Tree Diameter.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "423d4a1e",
+   "id": "4925cd8c",
    "metadata": {},
    "source": [
     "## Problem: Tree Diameter\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c369d6",
+   "id": "615375a7",
    "metadata": {},
    "source": [
     "### Approach:\n",
@@ -60,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9ef42ac7",
+   "execution_count": 1,
+   "id": "015b75ea-7ddb-4596-b982-f579d384edd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,17 @@
     "    def __init__(self, val,left = None, right = None):\n",
     "        self.val = val\n",
     "        self.left = left\n",
-    "        self.right = right\n",
+    "        self.right = right\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fe561da7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "class Info:\n",
     "    def __init__(self):\n",
     "        self.diameter = 0\n",
@@ -92,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "834c8a12",
+   "execution_count": 3,
+   "id": "07feec5c",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +112,7 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "302ea0ac",
+   "execution_count": 4,
+   "id": "ca070fd7",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +134,7 @@
        "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,8 +146,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "62a75044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diameterOfBT(root):\n",
+    "    diam, _ = getDiam(root)\n",
+    "    return diam\n",
+    "def getDiam(root):\n",
+    "    if root is None:\n",
+    "        return (0, 0)\n",
+    "    leftDaim, leftHeight = getDiam(root.left)\n",
+    "    rightDiam, rightHeight = getDiam(root.right)\n",
+    "    diameter = leftHeight + rightHeight\n",
+    "    maxD = max(diameter, leftDaim, rightDiam)\n",
+    "    height = max(leftHeight, rightHeight) +1\n",
+    "    return (maxD, height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3642eccf-9870-42e0-b91c-755f53dc14b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = Node(1, Node(2, Node(4), Node(5)), Node(3))\n",
+    "diameterOfBT(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "88cab97d-4a44-4f1a-969b-8f53ba8fd6a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = Node(1, Node(2))\n",
+    "diameterOfBT(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a8009ab3",
+   "id": "f40ef34c-3077-49cf-bcb8-62cee3ed3218",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
