--- a/22_TopologicalSort/Medium-Tasks Scheduling Order.ipynb
+++ b/22_TopologicalSort/Medium-Tasks Scheduling Order.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "680ff648",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "93b37619",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "[0, 1]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "a156ac79",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "[0, 2, 1, 3]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "0cb86fc2",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "[]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,42 +183,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "2854aaa5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def topologicalSort1(vertices, edges):\n",
-    "    graph = [[] for _ in range(vertices)]\n",
-    "    inorder = [0] * vertices\n",
-    "\n",
-    "    for i, j in edges:\n",
-    "        graph[j].append(i)\n",
-    "        inorder[i] += 1\n",
-    "    order = [x for x in range(len(inorder)) if inorder[x] == 0]\n",
-    "\n",
-    "    for i in order:\n",
-    "        for j in graph[i]:\n",
-    "            inorder[j] -= 1\n",
-    "            if inorder[j] == 0:\n",
-    "                order.append(j)\n",
-    "\n",
-    "    return list(reversed(order)) if len(order) == vertices else []"
+    "    graph = [[] for _ in range(numCourses)]\n",
+    "    inorder = [0] * numCourses\n",
+    "    for u, v in prerequisites:\n",
+    "        graph[v].append(u)\n",
+    "        inorder[u] += 1\n",
+    "    order = [node for node in range(numCourses) if inorder[node] == 0]\n",
+    "    for node in order:\n",
+    "        for v in graph[node]:\n",
+    "            inorder[v] -= 1\n",
+    "            if inorder[v] == 0:\n",
+    "                order.append(v)\n",
+    "    return order if len(order) == numCourses else []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "id": "6354e054",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 0]"
+       "[0, 1]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,17 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "id": "4dd5050c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 2, 1, 0]"
+       "[0, 1, 2, 3]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "id": "bc541ee1",
    "metadata": {},
    "outputs": [
@@ -264,7 +261,7 @@
        "[]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
