--- a/22_TopologicalSort/Hard-Allien Dictionary.ipynb
+++ b/22_TopologicalSort/Hard-Allien Dictionary.ipynb
@@ -45,18 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "b90d6049",
    "metadata": {},
    "outputs": [],
    "source": [
     "def alienDict(words):\n",
     "    graph = {l:set() for word in words for l in word}\n",
+    "    print(graph)\n",
     "    for i in range(1, len(words)):\n",
     "        w1 = words[i-1]\n",
     "        w2 = words[i]\n",
     "        minLen = min(len(w1), len(w2))\n",
-    "        if w1[:minLen] == w2[:minLen] and len(w1) > len(2):\n",
+    "        if w1[:minLen] == w2[:minLen] and len(w1) > len(w2):\n",
     "            return \"\"\n",
     "        for j in range(minLen):\n",
     "            if w1[j] != w2[j]:\n",
@@ -66,6 +67,7 @@
     "    return \"\".join(res)\n",
     "\n",
     "def topologicalSort(graph):\n",
+    "    print(graph)\n",
     "    visited = {}\n",
     "    stack = []\n",
     "    for l in graph:\n",
@@ -88,8 +90,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "2eacdc60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b': set(), 'a': set(), 'c': set()}\n",
+      "{'b': {'a'}, 'a': {'c'}, 'c': set()}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'bac'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = [\"ba\", \"bc\", \"ac\", \"cab\"]\n",
+    "alienDict(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f2ff202b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'w': set(), 'r': set(), 't': set(), 'f': set(), 'e': set()}\n",
+      "{'w': {'e'}, 'r': {'t'}, 't': {'f'}, 'f': set(), 'e': {'r'}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'wertf'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = [\"wrt\", \"wrf\", \"er\", \"ett\", \"rftt\"] \n",
+    "alienDict(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a55dbd27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'y': set(), 'w': set(), 'x': set(), 'z': set()}\n",
+      "{'y': {'w'}, 'w': {'z', 'x'}, 'x': {'z'}, 'z': set()}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'ywxz'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = [\"ywx\", \"wz\", \"xww\", \"xz\", \"zyy\", \"zwz\"]\n",
+    "alienDict(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8ccab390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def alienDict1(words):\n",
+    "    graph = {l:[] for word in words for l in word}\n",
+    "    inorder = {l:0 for word in words for l in word}\n",
+    "    \n",
+    "    for i in range(1, len(words)):\n",
+    "        w1 = words[i-1]\n",
+    "        w2 = words[i]\n",
+    "        minlen = min(len(w1), len(w2))\n",
+    "        if w1[:minlen] == w2[:minlen] and len(w1) > len(w2):\n",
+    "            return \"\"\n",
+    "        for j in range(minlen):\n",
+    "            if w1[j] != w2[j]:\n",
+    "                graph[w1[j]].append(w2[j])\n",
+    "                inorder[w2[j]] += 1\n",
+    "                break\n",
+    "        order = [k for k, v in inorder.items() if v ==0]\n",
+    "        \n",
+    "    for node in order:\n",
+    "        for u in graph[node]:\n",
+    "            inorder[u] -= 1\n",
+    "            if inorder[u] == 0:\n",
+    "                order.append(u)\n",
+    "    return \"\".join(order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4b9862bf-4876-4816-b8f6-12a2f23ac7fb",
    "metadata": {},
    "outputs": [
     {
@@ -105,13 +229,13 @@
    ],
    "source": [
     "words = [\"ba\", \"bc\", \"ac\", \"cab\"]\n",
-    "alienDict(words)"
+    "alienDict1(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "f2ff202b",
+   "execution_count": 29,
+   "id": "a4b8c0a2-7c60-445a-9559-b282b7e8bbb7",
    "metadata": {},
    "outputs": [
     {
@@ -120,20 +244,20 @@
        "'wertf'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "words = [\"wrt\", \"wrf\", \"er\", \"ett\", \"rftt\"] \n",
-    "alienDict(words)"
+    "words = [\"wrt\", \"wrf\", \"er\", \"ett\", \"rftt\"]\n",
+    "alienDict1(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "a55dbd27",
+   "execution_count": 31,
+   "id": "33675362-fda4-42cf-ada5-200b8ace95a9",
    "metadata": {},
    "outputs": [
     {
@@ -142,20 +266,20 @@
        "'ywxz'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "words = [\"ywx\", \"wz\", \"xww\", \"xz\", \"zyy\", \"zwz\"]\n",
-    "alienDict(words)"
+    "alienDict1(words)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ccab390",
+   "id": "943a7439-e7f8-4838-ae1c-137b9e1f9dbb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -163,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
